# ugc_ai_agent

./: .env.example  .gitignore  README.md  UGC_AI_Influencer_Codex_Architecture.docx  pyproject.toml
src/ugc_ai_influencer/: __init__.py  config.py  main.py  models.py
src/ugc_ai_influencer/creative_strategy/: __init__.py  service.py
src/ugc_ai_influencer/image_analysis/: __init__.py  service.py
src/ugc_ai_influencer/input_ingestion/: __init__.py  fetcher.py  service.py
src/ugc_ai_influencer/llm/: __init__.py  client.py  factory.py
src/ugc_ai_influencer/media_generation/: __init__.py  service.py
src/ugc_ai_influencer/orchestration/: jobs.py
src/ugc_ai_influencer/script_engine/: __init__.py  service.py
src/ugc_ai_influencer/storage/: repository.py
src/ugc_ai_influencer/telegram_interface/: __init__.py  handlers.py
tests/: test_handlers.py  test_ingestion.py  test_orchestrator.py  test_services.py
